# PC-Builder

./: .gitignore  README.md  auth.txt  pyproject.toml  requirements.txt
backend/: main.py  pyproject.toml  sqlite_test.py  test.db
backend/src/app/api/v1/api/v1/: routes.py
backend/src/app/core/: auth.py
backend/src/app/models/: category.py  database.py  transaction.py  user.py
backend/src/app/repository/: category.py  transaction.py  user.py
backend/src/app/routes/: auth.py  builds.py  category.py  transaction.py  user.py
backend/src/app/schemas/: category.py  transaction.py  user.py
backend/src/app/services/: category.py  transaction.py
backend/tests/: test_auth_and_users.py  test_categories_and_transactions.py
frontend/: index.html  styles.css
